@@ -5,10 +5,11 @@ History:
 5.0.0   2019/xx/xx
       - removed support for Python 2.7
       - MSS: improve type annotations and add CI check
+      - doc: add an example using the multiprocessing module (closes #82)
 
 4.0.2   2019/02/23
       - new contributor: foone
-      - Windows: ignore missing SetProcessDPIAware() on Window XP
+      - Windows: ignore missing SetProcessDPIAware() on Window XP (fixes #109)
 
 4.0.1   2019/01/26
       - Linux: fix several XLib functions signature (fixes #92)
